# elyria-consequence-physics-engine

./: LICENSE  README.md  pyproject.toml
app/: engine.py  main.py  models.py  receipts.py
docs/: PHYSICS_DIRECTION.md
examples/: continue_valid.json  halt_capacity_collapse.json  rebound_unstable_state.json
